project imported and button added and api fetched with search query

--- a/album.css
+++ b/album.css
@@ -9,8 +9,6 @@ font-family: 'Gotham Ultra', sans-serif; */
 
 body {
   background: rgb(18, 18, 16);
-  padding: 0;
-
   background: linear-gradient(
     0deg,
     rgba(18, 18, 16, 1) 0%,
@@ -64,7 +62,7 @@ body {
   background: linear-gradient(
     0deg,
     rgba(56, 3, 3, 0.555) 0%,
-    rgb(0, 0, 0) 58%,
+    rgb(109, 6, 17) 58%,
     rgba(49, 1, 7, 0.342) 100%
   );
 }
@@ -77,15 +75,11 @@ body {
   background: rgb(18, 18, 16);
   background: linear-gradient(
     0deg,
-    rgba(70, 69, 69, 0.555) 0%,
-    rgb(80, 37, 41) 58%,
-    rgba(63, 20, 25, 0.514) 100%
+    rgba(56, 3, 3, 0.555) 0%,
+    rgb(109, 6, 17) 58%,
+    rgba(49, 1, 7, 0.342) 100%
   );
   color: #e0dbdb;
-}
-
-#horizontal-nav {
-  position: absolute;
 }
 
 .navbar > a {
@@ -122,20 +116,14 @@ body {
 }
 
 .search-visible {
-  background-color: rgba(58, 52, 52, 0.534);
+  background-color: blue;
 }
 
+/* /* Sefa CSS Starting From Here */
 .fa-heart {
   font-size: 35px;
   align-content: center;
 }
-
-.fill-heart {
-  color: rgb(240, 116, 188);
-}
-
-/* /* Sefa CSS Starting From Here */
-
 .top-section {
   margin-top: 3rem;
 }
@@ -255,7 +243,13 @@ body {
 
 .links-nav:hover {
   opacity: 1;
-  background-color: rgba(156, 152, 152, 0.39);
+  background-color: rgba(190, 185, 185, 0.26);
+  transition-duration: 0.2s;
+}
+
+.container-fluid {
+  padding-left: 15px;
+  margin-right: 0;
 }
 
 #logo {
@@ -332,7 +326,7 @@ hr {
   opacity: 0.7;
   margin-left: 5px;
   padding-top: 3px;
-  padding-bottom: 6px;
+  padding-bottom: 5px;
 }
 
 .icons {
@@ -354,7 +348,6 @@ hr {
 footer {
   height: 100px;
   position: absolute;
-  padding-left: 10px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -376,9 +369,6 @@ footer #myProgressBar .icons {
   height: 4px;
 }
 
-.container-fluid {
-  overflow-x: hidden;
-}
 /* @media screen and (max-width: 867px) {
     .w-85{
         width: 75%;
@@ -399,94 +389,3 @@ footer #myProgressBar .icons {
 /* .scrollbar-black {
     scrollbar-color: #000 #F5F5F5;
     } */
-.container {
-  margin-left: 41px;
-}
-.container-fluid {
-  display: flex;
-  flex-flow: column wrap !important;
-  padding: 0 !important;
-  margin: 0 !important;
-  flex-grow: 4 !important;
-
-  margin-right: 0px !important;
-  margin-left: 0px !important;
-
-  margin-top: 0px !important;
-  margin-bottom: 0px !important;
-}
-
-@media (max-width: 978px) {
-  .div-fluid {
-    padding: 0 !important;
-    margin: 0 !important;
-    flex-flow: row wrap !important;
-    flex-grow: 4 !important;
-  }
-}
-
-#main-section {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: space-between;
-  background-repeat: no-repeat;
-  position: relative;
-}
-#backgroundImage {
-  display: flex;
-  min-height: 45vh;
-
-  position: relative;
-  background-image: url("assets/artisPageBackground.jpg");
-  align-items: stretch;
-  flex-direction: row;
-
-  background-position: center;
-  background-size: cover;
-}
-#header-head {
-  margin-bottom: -34vh;
-  position: absolute;
-  bottom: 8%;
-  left: 6%;
-  font-size: 3.5rem;
-  font-weight: 900;
-  font-size: 80px;
-}
-#small-text {
-  position: absolute;
-  bottom: 8%;
-  left: 10%;
-  margin-bottom: -37vh;
-}
-#verified-artist {
-  position: absolute;
-  bottom: 8%;
-  left: 14%;
-  margin-bottom: -22vh;
-  margin-left: -19px;
-}
-
-.artist-song1:hover .fa-play {
-  display: block !important;
-}
-
-.artist-song1:hover .row-number {
-  display: none;
-}
-
-.artist-song1 {
-  border: 1px solid transparent;
-}
-
-.artist-song1:hover {
-  border-color: rgba(126, 125, 125, 0.192);
-  background-color: rgba(126, 125, 125, 0.192);
-  transition-duration: 0.2s;
-}
-
-#see-more {
-  color: rgb(212, 212, 212);
-}
